<resources>
    <string name="app_name">DNG Processor</string>

    <string name="category_features">Features</string>
    <string name="pref_manual_select_title">Select manually</string>
    <string name="pref_manual_select_summary">Pick files to process</string>
    <string name="pref_reprocess_title">Reprocess</string>
    <string name="pref_reprocess_summary">The last processed image</string>

    <string name="category_files">Files</string>
    <string name="pref_background_process_title">Background processing</string>
    <string name="pref_background_process_desc">Automatically detect new files</string>
    <string name="pref_delete_original_title">Delete original</string>
    <string name="pref_delete_original_desc">Remove files that were successfully processed</string>
    <string name="pref_suffix_title">Add suffix</string>
    <string name="pref_suffix_desc">Append DNGP to the new file name</string>
    <string name="pref_save_path_title">Save directory</string>

    <string name="category_saturation_map">Saturation map</string>
    <string name="category_saturation_map_desc">Tweak intensity per hue</string>
    <string name="pref_saturation_r_title">Red - Skin tones</string>
    <string name="pref_saturation_y_title">Yellow</string>
    <string name="pref_saturation_g_title">Green - Grass</string>
    <string name="pref_saturation_c_title">Cyan - Foliage</string>
    <string name="pref_saturation_b_title">Blue - Water</string>
    <string name="pref_saturation_i_title">Indigo - Skies</string>
    <string name="pref_saturation_v_title">Violet</string>
    <string name="pref_saturation_m_title">Magenta</string>
    <string name="pref_saturation_limit_title">Soft limit</string>
    <string name="pref_saturation_reset_title">Reset</string>
    <string name="pref_saturation_reset_desc">Restore to default values</string>

    <string name="category_pipeline">Pipeline</string>
    <string name="pref_post_process_title">Post processing mode</string>
    <string name="post_processing_disabled">Disabled</string>
    <string name="post_processing_natural">Natural</string>
    <string name="post_processing_boosted">Boosted</string>
    <string name="pref_noise_reduce_title">Noise reduction</string>
    <string name="pref_noise_reduce_desc">Removes chromatic irregularities</string>
    <string name="pref_expose_fuse_title">Exposure fusion</string>
    <string name="pref_expose_fuse_desc">Compresses dynamic range</string>
    <string name="pref_lce_title">Local contrast enhancement</string>
    <string name="pref_lce_desc">Sharpens details for a crunchier look</string>
    <string name="pref_ahe_title">Adaptive histogram equalization</string>
    <string name="pref_ahe_desc">Improves visibility in high dynamic range scenes</string>
    <string name="pref_forward_matrix_title">Forward matrix</string>
    <string name="pref_forward_matrix_desc">Device specific tuning</string>
    <string name="pref_gain_map_title">Gain map</string>
    <string name="pref_gain_map_desc">Improves dynamic range</string>

    <string name="category_other">Other</string>
    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_desc">Support my work</string>
    <string name="pref_donate_url">https://play.google.com/store/apps/details?id=amirz.donation</string>
</resources>
